--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -15,7 +15,7 @@
             <li><a href="">Inicio</a></li>
             <li><a href="/userspanel">Usuarios</a></li>
             <li><a href="">Juegos</a></li>
-            <li><a href="/regproducto">Comida</a></li>
+            <li><a href="/food_panel">Comida</a></li>
             <li><a href="">Mesas</a></li>
             <li><a href="">Reservas</a></li>
             <li><a href="">Pedidos</a></li>
