agregando verDetalles de reserva y pedido

--- a/templates/games-panel.html
+++ b/templates/games-panel.html
@@ -115,6 +115,12 @@
             width: 100%;
             height: 100%;
         }
+        .title {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -127,14 +133,14 @@
             <li><a href="userspanel.html">Usuarios</a></li>
             <li><a href="games-panel.html">Juegos</a></li>
             <li><a href="food-panel.html">Comida</a></li>
-            <li><a href="/mesas">Mesas</a></li>
-            <li><a href="/reservas">Reservas</a></li>
-            <li><a href="/pedidos">Pedidos</a></li>
-            <li><a href="/empleados">Empleados</a></li>
-            <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
+            <li><a href="registrar-mesas.html">Mesas</a></li>
+            <li><a href="reservas-panel.html">Reservas</a></li>
+            <li><a href="pedidos-panel.html">Pedidos</a></li>
+            <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li><
         </ul>
     </nav>
     <div class="container">
+        <div class="title">Panel de Juegos</div>
         <div class="actions-container">
             <form method="GET" action="/SearchJuego">
                 <div class="search-container">
