--- a/templates/reservas-panel.html
+++ b/templates/reservas-panel.html
@@ -73,6 +73,12 @@
             margin-left: 10px;
             margin-right: 10px;
         }
+        .title {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -88,11 +94,11 @@
             <li><a href="registrar-mesas.html">Mesas</a></li>
             <li><a href="reservas-panel.html">Reservas</a></li>
             <li><a href="pedidos-panel.html">Pedidos</a></li>
-            <li><a href="/empleados">Empleados</a></li>
             <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
         </ul>
     </nav>
     <div class="container">
+        <div class="title">Panel de Reservas</div>
         <div class="actions-container">
             <form method="GET" action="/SearchReservas">
                 <div class="search-container">
