--- a/templates/userspanel.html
+++ b/templates/userspanel.html
@@ -21,6 +21,12 @@
             color: #fff !important;
             width: 120px !important; 
         }
+        .title {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -40,6 +46,7 @@
         </ul>
     </nav>
     <div class="container">
+        <div class="title">Panel de Usuarios</div>
         <div class="actions-container">
             <form method="GET" action="/userspanel">
                 <div class="search-container">
