--- a/templates/food-panel.html
+++ b/templates/food-panel.html
@@ -92,6 +92,12 @@
             padding: 5px;
             width: 150px; /* Ajustar el tamaño del select */
         }
+        .title {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -100,17 +106,18 @@
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
         <ul class="nav-items">
-            <li><a href="/adminpanel">Inicio</a></li>
-            <li><a href="/userspanel">Usuarios</a></li>
-            <li><a href="/juegos">Juegos</a></li>
-            <li><a href="/food_panel">Comida</a></li>
-            <li><a href="/mesas">Mesas</a></li>
-            <li><a href="/reservas">Reservas</a></li>
-            <li><a href="/pedidos">Pedidos</a></li>
-            <li><a href="/perfil_admin"><i class="fa-solid fa-user-gear"></i></a></li>
+            <li><a href="adminpanel.html">Inicio</a></li>
+            <li><a href="userspanel.html">Usuarios</a></li>
+            <li><a href="games-panel.html">Juegos</a></li>
+            <li><a href="food-panel.html">Comida</a></li>
+            <li><a href="registrar-mesas.html">Mesas</a></li>
+            <li><a href="reservas-panel.html">Reservas</a></li>
+            <li><a href="pedidos-panel.html">Pedidos</a></li>
+            <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
         </ul>
     </nav>
     <div class="container">
+        <div class="title">Panel de Productos/Comida</div>
         <div class="actions-container">
             <form method="GET" action="/food_panel">
                 <div class="search-container">
