--- a/templates/registrar-mesas.html
+++ b/templates/registrar-mesas.html
@@ -77,6 +77,12 @@
         #addProductBtn {
             width: 250px; /* Hacer el botón más ancho */
         }
+        .title {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -87,16 +93,16 @@
         <ul class="nav-items">
             <li><a href="adminpanel.html">Inicio</a></li>
             <li><a href="userspanel.html">Usuarios</a></li>
-            <li><a href="/juegos">Juegos</a></li>
+            <li><a href="games-panel.html">Juegos</a></li>
             <li><a href="food-panel.html">Comida</a></li>
             <li><a href="registrar-mesas.html">Mesas</a></li>
             <li><a href="reservas-panel.html">Reservas</a></li>
             <li><a href="pedidos-panel.html">Pedidos</a></li>
-            <li><a href="/empleados">Empleados</a></li>
             <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
         </ul>
     </nav>
     <div class="container">
+        <div class="title">Registro de mesas</div>
         <div class="actions-container">
             <form method="GET" action="/SearchUsuario">
                 <div class="search-container">
