CRUD y filtrado games-panel

--- a/templates/food-panel.html
+++ b/templates/food-panel.html
@@ -80,7 +80,17 @@
             justify-content: flex-start;            
             align-items: center;
             margin-top: 10px;
-            gap: 20px; 
+            gap: 5px; 
+        }
+
+        .group-by-container label {
+            font-size: 14px;
+        }
+
+        .group-by-container select {
+            font-size: 14px;
+            padding: 5px;
+            width: 150px; /* Ajustar el tamaño del select */
         }
     </style>
 </head>
