--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -12,14 +12,13 @@
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
         <ul class="nav-items">
-            <li><a href="">Inicio</a></li>
+            <li><a href="/adminpanel">Inicio</a></li>
             <li><a href="/userspanel">Usuarios</a></li>
-            <li><a href="">Juegos</a></li>
+            <li><a href="/game_panel">Juegos</a></li>
             <li><a href="/food_panel">Comida</a></li>
             <li><a href="">Mesas</a></li>
             <li><a href="">Reservas</a></li>
             <li><a href="">Pedidos</a></li>
-            <li><a href="">Empleados</a></li>
             <li><a href="/logout">Cerrar Sesion</a></li>
         </ul>
     </nav>
@@ -32,13 +31,13 @@
                 <span>Usuarios</span>
             </div>
             <div class="option">
-                <a href="/adminpanel/games">
+                <a href="/game_panel">
                     <i class="fa-solid fa-dice"></i>
                 </a>
                 <span>Juegos</span>
             </div>
             <div class="option">
-                <a href="/regproducto">
+                <a href="/food_panel">
                     <i class="fa-solid fa-burger"></i>
                 </a>
                 <span>Comida</span>
