--- a/templates/games-panel.html
+++ b/templates/games-panel.html
@@ -121,6 +121,23 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
+        .group-by-container {
+            display: flex;
+            justify-content: flex-start;            
+            align-items: center;
+            margin-top: 10px;
+            gap: 5px; 
+        }
+
+        .group-by-container label {
+            font-size: 14px;
+        }
+
+        .group-by-container select {
+            font-size: 14px;
+            padding: 5px;
+            width: 150px; /* Ajustar el tamaño del select */
+        }
     </style>
 </head>
 <body>
@@ -172,8 +189,8 @@
                         <th>Nombre <a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='nombre', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'nombre') == 'nombre' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
                         <th>Descripción <a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='descripcion', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'descripcion') == 'descripcion' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
                         <th>Precio Alquiler <a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='precio_alquiler', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'precio_alquiler') == 'precio_alquiler' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
-                        <th>Precio Venta<a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='precio_venta', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'precio_venta') == 'precio_venta' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
-                        <th>Disponible Venta<a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='disponible_venta', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'disponible_venta') == 'disponible_venta' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
+                        <th>Precio Venta <a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='precio_venta', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'precio_venta') == 'precio_venta' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
+                        <th>Disponible Venta <a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='disponible_venta', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'disponible_venta') == 'disponible_venta' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
                         <th>Imagen</th>
                         <th>Categoría <a href="{{ url_for('game_panel', search=request.args.get('search', ''), sort_by='categoria_juego_id_catJuego', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'categoria_juego_id_catJuego') == 'categoria_juego_id_catJuego' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
                         <th>Acciones</th>
@@ -193,7 +210,7 @@
                         <td>
                             <div class="action-buttons">
                                 <button class="editGameBtn" data-id="{{ juego.id_juego }}"><i class="fa-solid fa-edit"></i></button>
-                                {% if producto.activo %}
+                                {% if juego.activo %}
                                 <button class="deleteGameBtn" onclick="confirmDelete(event, '{{ juego.id_juego }}')"><i class="fa-solid fa-trash"></i></button>
                                 {% else %}
                                 <button class="unarchiveProductBtn" onclick="confirmUnarchive(event, '{{ juego.id_juego }}')"><i class="fa-solid fa-box-open"></i></button>
@@ -222,8 +239,7 @@
                     <span class="step" onclick="showTab(2)" id="step3">3</span>
                 </div>
             </div>
-            <form id="regForm" onsubmit="showSuccessMessage(event, 'contactPopup', 'regForm', 'Datos registrados con éxito')">
-                <div class="tab">
+            <form id="regForm" action="/add_game" method="POST" enctype="multipart/form-data" onsubmit="handleGameSubmit(event)">                <div class="tab">
                     <div class="form-group">
                         <label for="nombre">Nombre</label>
                         <input type="text" id="nombre" name="nombre" required>
@@ -251,7 +267,7 @@
                     <div class="form-group">
                         <label for="disponible_venta">Disponible Venta</label>
                         <label class="custom-checkbox">
-                            <input type="checkbox" id="disponible_venta" name="disponible_venta" required>
+                            <input type="checkbox" id="disponible_venta" name="disponible_venta">
                             <span class="checkmark"></span>
                         </label>
                         <span class="error-message" id="error-disponible_venta"></span>
@@ -293,8 +309,7 @@
                     <span class="step" onclick="showEditTab(2)" id="step3">3</span>
                 </div>
             </div>
-            <form id="editForm" onsubmit="showSuccessMessage(event, 'editPopup', 'editForm', 'Datos registrados con éxito')">
-                <div class="tab">
+            <form id="editForm" method="POST" onsubmit="handleEditGameSubmit(event)">                <div class="tab">
                     <div class="form-group">
                         <label for="edit_nombre">Nombre</label>
                         <input type="text" id="edit_nombre" name="nombre" required>
@@ -322,14 +337,14 @@
                     <div class="form-group">
                         <label for="edit_disponible_venta">Disponible Venta</label>
                         <label class="custom-checkbox">
-                            <input type="checkbox" id="edit_disponible_venta" name="disponible_venta" required>
+                            <input type="checkbox" id="edit_disponible_venta" name="disponible_venta">
                             <span class="checkmark"></span>
                         </label>
                         <span class="error-message" id="edit-error-disponible_venta"></span>
                     </div>
                     <div class="form-group">
                         <label for="edit_imagen">Imagen</label>
-                        <input type="file" id="edit_imagen" name="imagen" accept="image/png, image/jpeg, image/jpg" required>
+                        <input type="file" id="edit_imagen" name="imagen" accept="image/png, image/jpeg, image/jpg">
                         <span class="error-message" id="edit-error-imagen"></span>
                     </div>
                     <div class="form-group">
@@ -355,7 +370,7 @@
             <span class="close-btn" onclick="closeCategoryPopup()">&times;</span>
             <img src="../static/images/category.png" alt="Category Icon" class="product-icon">
             <h2>REGISTRO NUEVA CATEGORÍA</h2>
-            <form id="categoryForm" onsubmit="showSuccessMessage(event, 'categoryPopup', 'categoryForm', 'Categoría registrada con éxito')">
+            <form id="categoryForm" action="/add_categoryGame" method="POST" onsubmit="handleCategorySubmit(event)">
                 <div class="form-group">
                     <label for="categoria_nombre">Nombre de la categoría</label>
                     <input type="text" id="categoria_nombre" name="nombre" required>
@@ -382,13 +397,25 @@
             document.getElementById('categoryPopup').style.display = 'block';
         });
 
-        document.querySelectorAll('.editGameBtn').forEach(function(button) {
+        document.querySelectorAll('.editGameBtn').forEach(button => {
             button.addEventListener('click', function() {
-                document.getElementById('editPopup').style.display = 'block';
-                showEditTab(0);
+                const gameId = button.getAttribute('data-id');
+                fetch(`/get_game/${gameId}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        document.getElementById('edit_nombre').value = data.nombre;
+                        document.getElementById('edit_descripcion').value = data.descripcion;
+                        document.getElementById('edit_precio_alquiler').value = data.precio_alquiler;
+                        document.getElementById('edit_precio_venta').value = data.precio_venta;
+                        document.getElementById('edit_disponible_venta').checked = data.disponible_venta;
+                        document.getElementById('edit_categoria').value = data.categoria_juego_id_catJuego;
+                        document.getElementById('editForm').action = `/update_game/${gameId}`;
+                        document.getElementById('editPopup').style.display = 'block';
+                        showEditTab(0);
+                    })
+                    .catch(error => console.error('Error loading the game data:', error));
             });
         });
-
         function showTab(n) {
             let tabs = document.getElementById("regForm").getElementsByClassName("tab");
             for (let i = 0; i < tabs.length; i++) {
@@ -430,6 +457,25 @@
                 lines[i].className += " active";
             }
         }
+        document.querySelectorAll('.editGameBtn').forEach(button => {
+            button.addEventListener('click', function() {
+                const gameId = button.getAttribute('data-id');
+                fetch(`/get_game/${gameId}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        document.getElementById('edit_nombre').value = data.nombre;
+                        document.getElementById('edit_descripcion').value = data.descripcion;
+                        document.getElementById('edit_precio_alquiler').value = data.precio_alquiler;
+                        document.getElementById('edit_precio_venta').value = data.precio_venta;
+                        document.getElementById('edit_disponible_venta').checked = data.disponible_venta;
+                        document.getElementById('edit_categoria').value = data.categoria_juego_id_catJuego;
+                        document.getElementById('editForm').action = `/update_game/${gameId}`;
+                        document.getElementById('editPopup').style.display = 'block';
+                        showEditTab(0);
+                    })
+                    .catch(error => console.error('Error loading the game data:', error));
+            });
+        });
 
         function closePopup() {
             document.getElementById('contactPopup').style.display = 'none';
@@ -492,6 +538,76 @@
             });
         }
 
+    function handleGameSubmit(event) {
+    event.preventDefault();
+    const form = event.target;
+    const formData = new FormData(form);
+    
+    fetch(form.action, {
+        method: 'POST',
+        body: formData
+    }).then(response => {
+        if (response.ok) {
+            Swal.fire('¡Éxito!', 'Juego registrado exitosamente.', 'success').then(() => {
+                window.location.href = '/game_panel';
+            });
+        } else {
+            Swal.fire('Error', 'Hubo un error al registrar el juego.', 'error');
+        }
+    }).catch(error => {
+        Swal.fire('Error', 'Hubo un error al registrar el juego.', 'error');
+    });
+}
+
+function handleEditGameSubmit(event) {
+    event.preventDefault();
+    const form = event.target;
+    const formData = new FormData(form);
+    
+    fetch(form.action, {
+        method: 'POST',
+        body: formData
+    }).then(response => {
+        if (response.ok) {
+            Swal.fire('¡Éxito!', 'Juego actualizado exitosamente.', 'success').then(() => {
+                window.location.href = '/game_panel';
+            });
+        } else {
+            Swal.fire('Error', 'Hubo un error al actualizar el juego.', 'error');
+        }
+    }).catch(error => {
+        Swal.fire('Error', 'Hubo un error al actualizar el juego.', 'error');
+    });
+}
+        //manejar posteo categoria
+        function handleCategorySubmit(event) {
+            event.preventDefault();
+            const form = event.target;
+            fetch(form.action, {
+                method: form.method,
+                body: new FormData(form)
+            })
+            .then(response => {
+                if (response.ok) {
+                    showSuccessMessage(event, 'categoryPopup', 'categoryForm', 'Categoría registrada con éxito');
+                } else {
+                    return response.text().then(text => { throw new Error(text); });
+                }
+            })
+            .catch(error => {
+                console.error('Error al registrar la categoría:', error);
+                Swal.fire({
+                    title: 'Error',
+                    text: 'Hubo un problema al registrar la categoría.',
+                    icon: 'error',
+                    confirmButtonText: 'OK',
+                    customClass: {
+                        confirmButton: 'swal2-confirm'
+                    }
+                });
+            });
+        }
+
         function showSuccessMessage(event, popupId, formId, message) {
             event.preventDefault();
             Swal.fire({
@@ -508,26 +624,62 @@
             });
         }
 
-        function confirmDelete(event) {
-            event.preventDefault(); // Prevenir la acción predeterminada del botón
-            Swal.fire({
-                title: '¿Está seguro?',
-                text: '¿Está seguro de eliminar el registro?',
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonText: 'Sí, eliminar',
-                cancelButtonText: 'No, cancelar',
-                customClass: {
-                    confirmButton: 'swal2-confirm',
-                    cancelButton: 'swal2-cancel'
-                }
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    // Continuar con la acción de eliminar el registro
-                    Swal.fire('¡Eliminado!', 'El registro ha sido eliminado.', 'success');
-                }
+        function confirmDelete(event, gameId) {
+    event.preventDefault();
+    Swal.fire({
+        title: '¿Está seguro?',
+        text: '¿Está seguro de archivar este juego?',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Sí, archivar',
+        cancelButtonText: 'No, cancelar',
+        customClass: {
+            confirmButton: 'swal2-confirm',
+            cancelButton: 'swal2-cancel'
+        }
+    }).then((result) => {
+        if (result.isConfirmed) {
+            fetch(`/delete_game/${gameId}`, {
+                method: 'POST'
+            }).then(() => {
+                Swal.fire('¡Archivado!', 'El juego ha sido archivado.', 'success').then(() => {
+                    window.location.reload();
+                });
+            }).catch(error => {
+                Swal.fire('Error', 'Hubo un error al archivar el juego.', 'error');
             });
         }
+    });
+}
+
+function confirmUnarchive(event, gameId) {
+    event.preventDefault();
+    Swal.fire({
+        title: '¿Está seguro?',
+        text: '¿Está seguro de desarchivar este juego?',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Sí, desarchivar',
+        cancelButtonText: 'No, cancelar',
+        customClass: {
+            confirmButton: 'swal2-confirm',
+            cancelButton: 'swal2-cancel'
+        }
+    }).then((result) => {
+        if (result.isConfirmed) {
+            fetch(`/unarchive_game/${gameId}`, {
+                method: 'POST'
+            }).then(() => {
+                Swal.fire('¡Desarchivado!', 'El juego ha sido desarchivado.', 'success').then(() => {
+                    window.location.reload();
+                });
+            }).catch(error => {
+                Swal.fire('Error', 'Hubo un error al desarchivar el juego.', 'error');
+            });
+        }
+    });
+}
+
     </script>
 </body>
 </html>
