--- a/templates/food-menu.html
+++ b/templates/food-menu.html
@@ -1,163 +1,254 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <title>Menu de Comida</title>
-        <link rel="stylesheet" href="../static/css/food-menu.css">
-        <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="navbar">
-            <div class="nav-logo">
-                <img src="../static/images/logo.png" alt="Monster Dojo">
-            </div>
-            <button class="menu-toggle" id="mobile-menu">
-                <span class="fas fa-bars"></span>
-            </button>
-            <div class="navbar-right">
-                <a href="/">Home</a>
-                <a href="#about">Sobre nosotros</a>
-                <a href="#menu">Menú</a>
-                <a href="#order">Ubicación</a>
-                <a href="/login">Iniciar Sesión</a>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <title>Menu de Comida</title>
+    <link rel="stylesheet" href="../static/css/food-menu.css">
+    <link rel="stylesheet" href="../static/css/popup_carrito.css">
+    <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div class="navbar">
+        <div class="nav-logo">
+            <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
-        <div class="container">
-            <div class="menu-section">
-                <div class="menu-category">
-                    <h2>Aperitivos</h2>
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <img src="../static/images/food/food1.jpg" alt="Food 1">
-                            <div class="item-info">
-                                <h3>Food 1</h3>
-                                <p>Descripción del platillo 1</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
+        <button class="menu-toggle" id="mobile-menu">
+            <span class="fas fa-bars"></span>
+        </button>
+        <div class="navbar-right">
+            <a href="/">Home</a>
+            <a href="#about">Sobre nosotros</a>
+            <a href="#menu">Menú</a>
+            <a href="#order">Ubicación</a>
+            <a href="/login">Iniciar Sesión</a>
+            <a href="#" id="cart-icon"><i class="fas fa-shopping-cart"></i></a> <!-- Ícono del carrito de compras -->
+        </div>
+    </div>
+    <div class="container">
+        <div class="menu-section">
+            <div class="menu-category">
+                <h2>Aperitivos</h2>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <img src="../static/images/food/food1.jpg" alt="Food 1">
+                        <div class="item-info">
+                            <h3>Food 1</h3>
+                            <p>Descripción del platillo 1</p>
                         </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food2.jpg" alt="Food 2">
-                            <div class="item-info">
-                                <h3>Food 2</h3>
-                                <p>Descripción del platillo 2</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
                     </div>
-                </div>
-                <div class="menu-category">
-                    <h2>Platos Principales</h2>
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <img src="../static/images/food/food3.jpg" alt="Food 3">
-                            <div class="item-info">
-                                <h3>Food 3</h3>
-                                <p>Descripción del platillo 3</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food2.jpg" alt="Food 2">
+                        <div class="item-info">
+                            <h3>Food 2</h3>
+                            <p>Descripción del platillo 2</p>
                         </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food4.jpg" alt="Food 4">
-                            <div class="item-info">
-                                <h3>Food 4</h3>
-                                <p>Descripción del platillo 4</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food3.jpg" alt="Food 3">
-                            <div class="item-info">
-                                <h3>Food 3</h3>
-                                <p>Descripción del platillo 3</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food4.jpg" alt="Food 4">
-                            <div class="item-info">
-                                <h3>Food 4</h3>
-                                <p>Descripción del platillo 4</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
-                    </div>
-                </div>           
-            </div>
-            <div class="menu-section" >
-                <div class="menu-category">
-                    <h2>Postres</h2>
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <img src="../static/images/food/food5.jpg" alt="Food 5">
-                            <div class="item-info">
-                                <h3>Food 5</h3>
-                                <p>Descripción del postre 1</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food6.jpg" alt="Food 6">
-                            <div class="item-info">
-                                <h3>Food 6</h3>
-                                <p>Descripción del postre 2</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food11.jpg" alt="Food 11">
-                            <div class="item-info">
-                                <h3>Food 11</h3>
-                                <p>Descripción del postre 3</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
-                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
                     </div>
                 </div>
             </div>
-            <div class="menu-section">
-                <div class="menu-category">
-                    <h2>Bebidas Sin alcohol</h2>
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <img src="../static/images/food/food7.jpg" alt="Food 7">
-                            <div class="item-info">
-                                <h3>Food 7</h3>
-                                <p>Descripción de la bebida 1</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
+            <div class="menu-category">
+                <h2>Platos Principales</h2>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <img src="../static/images/food/food3.jpg" alt="Food 3">
+                        <div class="item-info">
+                            <h3>Food 3</h3>
+                            <p>Descripción del platillo 3</p>
                         </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food8.jpg" alt="Food 8">
-                            <div class="item-info">
-                                <h3>Food 8</h3>
-                                <p>Descripción de la bebida 2</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food4.jpg" alt="Food 4">
+                        <div class="item-info">
+                            <h3>Food 4</h3>
+                            <p>Descripción del platillo 4</p>
                         </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food3.jpg" alt="Food 3">
+                        <div class="item-info">
+                            <h3>Food 3</h3>
+                            <p>Descripción del platillo 3</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food4.jpg" alt="Food 4">
+                        <div class="item-info">
+                            <h3>Food 4</h3>
+                            <p>Descripción del platillo 4</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
                     </div>
                 </div>
-                <div class="menu-category">
-                    <h2>Bebidas Alcohólicas</h2>
-                    <div class="menu-items">
-                        <div class="menu-item">
-                            <img src="../static/images/food/food9.jpg" alt="Food 9">
-                            <div class="item-info">
-                                <h3>Food 9</h3>
-                                <p>Descripción de la bebida 3</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
+            </div>           
+        </div>
+        <div class="menu-section" >
+            <div class="menu-category">
+                <h2>Postres</h2>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <img src="../static/images/food/food5.jpg" alt="Food 5">
+                        <div class="item-info">
+                            <h3>Food 5</h3>
+                            <p>Descripción del postre 1</p>
                         </div>
-                        <div class="menu-item">
-                            <img src="../static/images/food/food10.jpg" alt="Food 10">
-                            <div class="item-info">
-                                <h3>Food 10</h3>
-                                <p>Descripción de la bebida 4</p>
-                            </div>
-                            <button class="order-btn">Añadir al carrito</button>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food6.jpg" alt="Food 6">
+                        <div class="item-info">
+                            <h3>Food 6</h3>
+                            <p>Descripción del postre 2</p>
                         </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food11.jpg" alt="Food 11">
+                        <div class="item-info">
+                            <h3>Food 11</h3>
+                            <p>Descripción del postre 3</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
                     </div>
                 </div>
             </div>
         </div>
-    </body>
+        <div class="menu-section">
+            <div class="menu-category">
+                <h2>Bebidas Sin alcohol</h2>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <img src="../static/images/food/food7.jpg" alt="Food 7">
+                        <div class="item-info">
+                            <h3>Food 7</h3>
+                            <p>Descripción de la bebida 1</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food8.jpg" alt="Food 8">
+                        <div class="item-info">
+                            <h3>Food 8</h3>
+                            <p>Descripción de la bebida 2</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-category">
+                <h2>Bebidas Alcohólicas</h2>
+                <div class="menu-items">
+                    <div class="menu-item">
+                        <img src="../static/images/food/food9.jpg" alt="Food 9">
+                        <div class="item-info">
+                            <h3>Food 9</h3>
+                            <p>Descripción de la bebida 3</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="../static/images/food/food10.jpg" alt="Food 10">
+                        <div class="item-info">
+                            <h3>Food 10</h3>
+                            <p>Descripción de la bebida 4</p>
+                        </div>
+                        <button class="order-btn">Añadir al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Pop-up del carrito de compras -->
+    <div class="popup" id="shoppingCartPopup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup()">&times;</span>
+            <h2>Carrito de compras 🛒</h2>
+            <a href="#" class="remove-all">Remover todo</a>
+            <table class="cart-table">
+                <thead>
+                    <tr>
+                        <th>Descripción</th>
+                        <th>Cantidad</th>
+                        <th>Quitar</th>
+                        <th>Precio</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="cart-item">
+                        <td>
+                            <div class="item-details">
+                                <img src="../static/images/food3.jpg" alt="Pasta Fettucinne" class="item-image">
+                                <div class="item-info">
+                                    <h3>Pasta Fettucinne</h3>
+                                    <p>Plato</p>
+                                    <span class="veg-icon"></span>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="item-quantity">
+                                <button class="quantity-btn">+</button>
+                                <span class="quantity">2</span>
+                                <button class="quantity-btn">-</button>
+                            </div>
+                        </td>
+                        <td>
+                            <a href="#" class="remove">Quitar</a>
+                        </td>
+                        <td>
+                            <p>15 Bs.</p>
+                        </td>
+                    </tr>
+                    <tr class="cart-item">
+                        <td>
+                            <div class="item-details">
+                                <img src="/static/images/food2.jpg" alt="Tiramisú" class="item-image">
+                                <div class="item-info">
+                                    <h3>Tiramisú</h3>
+                                    <p>1 porción</p>
+                                    <span class="veg-icon"></span>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="item-quantity">
+                                <button class="quantity-btn">+</button>
+                                <span class="quantity">1</span>
+                                <button class="quantity-btn">-</button>
+                            </div>
+                        </td>
+                        <td>
+                            <a href="#" class="remove">Quitar</a>
+                        </td>
+                        <td>
+                            <p>30 Bs.</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="subtotal">
+                <p>Sub-Total</p>
+                <span class="items-count">2 Productos</span>
+                <span class="total-price">45 Bs.</span>
+            </div>
+            <div class="button-container">
+                <button class="checkout-btn">Pedir</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('cart-icon').addEventListener('click', function(event) {
+            event.preventDefault();
+            document.getElementById('shoppingCartPopup').style.display = 'block';
+        });
+    
+        function closePopup() {
+            document.getElementById('shoppingCartPopup').style.display = 'none';
+        }
+    </script>
+</body>
 </html>
