CRUD y filtrado registrar-mesas

--- a/templates/adminpanel.html
+++ b/templates/adminpanel.html
@@ -16,7 +16,7 @@
             <li><a href="/userspanel">Usuarios</a></li>
             <li><a href="/game_panel">Juegos</a></li>
             <li><a href="/food_panel">Comida</a></li>
-            <li><a href="">Mesas</a></li>
+            <li><a href="/registro_mesa">Mesas</a></li>
             <li><a href="">Reservas</a></li>
             <li><a href="">Pedidos</a></li>
             <li><a href="/logout">Cerrar Sesion</a></li>
@@ -43,7 +43,7 @@
                 <span>Comida</span>
             </div>
             <div class="option">
-                <a href="/adminpanel/orders">
+                <a href="/registro_mesa">
                     <i class="fa-solid fa-utensils"></i>
                 </a>
                 <span>Mesas</span>
