--- a/templates/food-panel.html
+++ b/templates/food-panel.html
@@ -104,7 +104,7 @@
             <li><a href="/userspanel">Usuarios</a></li>
             <li><a href="/juegos">Juegos</a></li>
             <li><a href="/food_panel">Comida</a></li>
-            <li><a href="/mesas">Mesas</a></li>
+            <li><a href="/registro_mesa">Mesas</a></li>
             <li><a href="/reservas">Reservas</a></li>
             <li><a href="/pedidos">Pedidos</a></li>
             <li><a href="/perfil_admin"><i class="fa-solid fa-user-gear"></i></a></li>
